Fix display of large masthead text on iPhone 6s.

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -403,7 +403,7 @@ body {
   -ms-transform: translateY(10%);
   transform: translateY(10%);
 }
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   .masthead-title {
     font-size: 32px !important;
     line-height: 45px;
